--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>RemoteControlFrontend</title>
+  <title>Remote control with video</title>
   <base href="/video-streaming">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.3ff695c00d717f2d2a11.css"></head>
+<link rel="stylesheet" href="video-streaming/styles.3ff695c00d717f2d2a11.css"></head>
 <body>
   <app-root></app-root>
-<script src="video-streaming/runtime.acf0dec4155e77772545.js" defer></script><script src="video-streaming/polyfills.35a5ca1855eb057f016a.js" defer></script><script src="video-streaming/main.3aea9bcf00f28da36318.js" defer></script></body>
+<script src="video-streaming/runtime.acf0dec4155e77772545.js" defer></script><script src="video-streaming/polyfills.35a5ca1855eb057f016a.js" defer></script><script src="video-streaming/main.a52eb61791f037f75b3a.js" defer></script></body>
 </html>
